# time-series-viewer

./: .gitignore  02_minimal_cache.py  README.md  create_bigdata.py  create_parquet.py  pyproject.toml  test.py
data/: artificial.parquet
src/time_series_viewer/: __init__.py  __main__.py  app.py  selection.py
