[project]
name = "time-series-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jolsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.32.2",
]

[project.scripts]
tsv = "time_series_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
