[project]
name = "time-series-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jolsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "dash-extensions>=2.0.4",
    "pandas>=2.3.1",
    "plotly<6.0.0",
    "plotly-resampler>=0.10.0",
    "polars>=1.32.2",
    "pyarrow>=21.0.0",
]

[project.scripts]
# tsv = "time_series_viewer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
